--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -15,7 +15,7 @@ spring:
 
 jwt:
   secret: chaveSecretaParaTestes
-  expiration: 3600000 # 1 hora em milissegundos
+  expiration: 3600000
 
 server:
   port: 8081
